изменен setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,9 @@ exclude =
     env/,
     docs/,
     frontend/,
-    infra/
+    infra/,
+    backend/venv,
+    backend/users/migrations,
+    backend/recipes/migrations
 per-file-ignores =
     */settings.py:E501
