--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
-ignore =
-    W503
+ignore = 
+    W503,
+    F811
 exclude =
     tests/,
     */migrations/,
@@ -9,9 +10,9 @@ exclude =
     env/,
     docs/,
     frontend/,
-    infra/,
-    backend/venv,
-    backend/users/migrations,
-    backend/recipes/migrations
+    infra/
+    # backend/venv,
+    # backend/users/migrations,
+    # backend/recipes/migrations
 per-file-ignores =
     */settings.py:E501
